# swish

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AUTHORS  CHANGELOG  CMakeLists.txt  COPYING.rtf  CoFactory.h  ConnCopyPolicy.cpp  ConnCopyPolicy.h  Connection.h  DataObject.cpp  DataObject.h  DataObjectFactory.cpp  DataObjectFactory.h  Doxyfile  DummyFolder.cpp  DummyFolder.h  DummyFolder.rgs  DummyStream.cpp  DummyStream.h  ExplorerCallback.cpp  ExplorerCallback.h  FileGroupDescriptor.h  Folder.cpp  Folder.h  HostContextMenu.cpp  HostContextMenu.h  HostFolder.cpp  HostFolder.h  HostFolder.rgs  HostInfoDialog.cpp  HostInfoDialog.h  HostPidl.h  HostPidlManager.cpp  HostPidlManager.h  IconExtractor.cpp  IconExtractor.h  KbdInteractiveDialog.cpp  (+71 more)
ezel/: CMakeLists.txt  control.hpp  control_parent_impl.hpp  ezel.vcproj  form.hpp  window.hpp
ezel/controls/: button.hpp  checkbox.hpp  edit.hpp  icon.hpp  label.hpp  line.hpp  spinner.hpp
ezel/detail/: command_dispatch.hpp  command_handler_mixin.hpp  dialog_template.hpp  hooks.hpp  hwnd_linking.hpp  message_dispatch.hpp  window_impl.hpp  window_link.hpp  window_proc.hpp  window_proxy.hpp
libssh/: AUTHORS  CHANGELOG  Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.in  sample.c  samplesshd.c
libssh/doc/: base64.txt  draft-ietf-secsh-agent-01.txt  draft-ietf-secsh-architecture-14.txt  draft-ietf-secsh-assignednumbers-04.txt  draft-ietf-secsh-auth-kbdinteract-05-cleaned.txt  draft-ietf-secsh-auth-kbdinteract-05.txt  draft-ietf-secsh-break-00.txt  draft-ietf-secsh-connect-17.txt  draft-ietf-secsh-dh-group-exchange-04.txt  draft-ietf-secsh-fingerprint-01.txt  draft-ietf-secsh-gsskeyex-06.txt  draft-ietf-secsh-newmodes-00.txt  draft-ietf-secsh-publickeyfile-03.txt  draft-ietf-secsh-scp-sftp-ssh-uri-00.txt  draft-ietf-secsh-transport-16.txt  draft-ietf-secsh-userauth-17.txt
libssh/libssh/: Makefile  Makefile.in  auth.c  base64.c  buffer.c  channels.c  client.c  connect.c  crypt.c  dh.c  error.c  gzip.c  kex.c  keyfiles.c  keys.c  malloc.c  misc.c  options.c  packet.c  server.c  sftp.c  string.c  wrapper.c
po/: CMakeLists.txt  compile_mo.sh  nl.mo  nl.po
po/bg/: swish.mo  swish.po
po/ca/: swish.mo  swish.po
po/cs/: swish.mo  swish.po
po/cy/: swish.mo  swish.po
po/da_DK/: swish.mo  swish.po
po/de/: swish.mo  swish.po
po/el_GR/: swish.mo  swish.po
po/es/: swish.mo  swish.po
po/et/: swish.mo  swish.po
po/fi/: swish.mo  swish.po
po/fr/: swish.mo  swish.po
po/he/: swish.mo  swish.po
po/hi/: swish.mo  swish.po
po/hu/: swish.mo  swish.po
po/it/: swish.mo  swish.po
po/ja/: swish.mo  swish.po
po/ko/: swish.mo  swish.po
po/lv/: swish.mo  swish.po
po/nl/: swish.mo  swish.po
po/pl/: swish.mo  swish.po
po/pt/: swish.mo  swish.po
po/pt_BR/: swish.mo  swish.po
po/ro/: swish.mo  swish.po
po/ru/: swish.mo  swish.po
po/sk/: swish.mo  swish.po
po/sv/: swish.mo  swish.po
po/template/: swish.pot
po/templates/: swish.pot
po/tr/: swish.mo  swish.po
po/zh_CN/: swish.mo  swish.po
po/zh_TW/: swish.mo  swish.po
ssh/: .clang-format  CMakeLists.txt  agent.hpp  exception.hpp  filesystem.hpp  host_key.hpp  knownhost.hpp  path.hpp  session.hpp  sftp.hpp  sftp_error.hpp  ssh.vcproj  ssh_error.hpp  stream.hpp
ssh/detail/: agent_state.hpp  file_handle_state.hpp  session_state.hpp  sftp_channel_state.hpp
ssh/filesystem/: path.hpp
swish/connection/: CMakeLists.txt  authenticated_session.cpp  authenticated_session.hpp  connection.cpp  connection.hpp  connection.vcproj  connection_spec.cpp  connection_spec.hpp  interruptable_session.hpp  running_session.cpp  running_session.hpp  session_manager.cpp  session_manager.hpp  session_pool.cpp  session_pool.hpp
swish/frontend/: CMakeLists.txt  UserInteraction.cpp  UserInteraction.hpp  announce_error.cpp  announce_error.hpp  bind_best_taskdialog.cpp  bind_best_taskdialog.hpp  frontend.vcproj  winsparkle_shower.cpp  winsparkle_shower.hpp
swish/host_folder/: CMakeLists.txt  ViewCallback.cpp  ViewCallback.hpp  columns.cpp  columns.hpp  commands.cpp  commands.hpp  context_menu_callback.cpp  context_menu_callback.hpp  extract_icon.hpp  host_folder.vcproj  host_itemid_connection.cpp  host_itemid_connection.hpp  host_management.cpp  host_management.hpp  host_pidl.hpp  menu_command_manager.cpp  menu_command_manager.hpp  overlay_icon.hpp  properties.cpp  properties.hpp
swish/nse/: CMakeLists.txt  Command.cpp  Command.hpp  StaticColumn.hpp  UICommand.cpp  UICommand.hpp  command_site.cpp  command_site.hpp  data_object_util.cpp  data_object_util.hpp  default_context_menu_callback.cpp  default_context_menu_callback.hpp  explorer_command.cpp  explorer_command.hpp  nse.vcproj  task_pane.hpp  view_callback.cpp  view_callback.hpp
swish/provider/: CMakeLists.txt  KeyboardInteractive.cpp  KeyboardInteractive.hpp  Libssh2ProviderCoClass.h  Provider.cpp  Provider.hpp  Session.cpp  Session.h  Session.hpp  SessionFactory.cpp  SessionFactory.hpp  SftpProvider.h  SftpStream.cpp  SftpStream.hpp  com_dll.rc  com_dll.vcproj  libssh2_sftp_filesystem_item.cpp  libssh2_sftp_filesystem_item.hpp  module.cpp  pch.cpp  pch.h  provider.vcproj  provider_error_adapter.hpp  running_session.cpp  running_session.hpp  sftp_filesystem_item.cpp  sftp_filesystem_item.hpp  sftp_provider.hpp  sftp_provider_path.hpp  ticketed_stream.hpp
swish/remote_folder/: CMakeLists.txt  Mode.cpp  Mode.h  ViewCallback.cpp  ViewCallback.hpp  columns.cpp  columns.hpp  commands.cpp  connection.cpp  connection.hpp  context_menu_callback.cpp  context_menu_callback.hpp  filemode.c  filemode.h  pidl_connection.cpp  pidl_connection.hpp  properties.cpp  properties.hpp  remote_folder.vcproj  remote_pidl.hpp  swish_pidl.hpp  symlink.cpp  symlink.hpp
swish/shell_folder/: CMakeLists.txt  CoFactory.h  (+67 more)
test/: CMakeLists.txt  CppUnitExtensions.h  DummyStream.cpp  DummyStream.h  MockSftpConsumer.cpp  MockSftpConsumer.h  MockSftpProvider.cpp  MockSftpProvider.h  TestConfig.cpp  TestConfig.h  fix_key_permissions.sh  limits.h  module.cpp.in  provider.vcproj  swish.vcproj  tree.hh
(+634 files in other folders)
