#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(libssh, 0.11 , aris@0xbadc0de.be)
AC_CONFIG_SRCDIR([sample.c])
AC_CONFIG_HEADER([config.h])

# Check for the OS.
AC_CANONICAL_HOST
case "$host" in
	*-apple*)
	DYLIB_EXTENSION="dylib"
	LIBSSH_LDFLAGS="-dynamiclib -prebind -seg1addr 0x3a000000 -install_name \"${libdir}/libssh.dylib\" -headerpad_max_install_names -current_version 0.1"
	;;
	*-mingw32msvc*)
	DYLIB_EXTENSION="dll"
	LIBSSH_LDFLAGS="-shared"
	LIBS="$LIBS -lwsock32 -lgdi32"
	;;
	*)
	DYLIB_EXTENSION="so"
	LIBSSH_LDFLAGS="-shared"
	;;
esac
AC_SUBST(DYLIB_EXTENSION)
AC_SUBST(LIBSSH_LDFLAGS)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_C_BIGENDIAN

# Checks for libraries.
AC_CHECK_LIB([crypto], [BN_init])
AC_CHECK_LIB([z], [deflateInit_])
AC_SEARCH_LIBS(inet_ntoa, socket resolv nsl ws2_32 wsock32,, [ AC_MSG_WARN([Couldn't find inet_ntoa]) ])
AC_SEARCH_LIBS(gethostbyname, socket resolv nsl ws2_32 wsock32,, [ AC_MSG_WARN([Couldn't find gethostbyname]) ])
AC_SEARCH_LIBS(gethostbyaddr, socket resolv nsl ws2_32 wsock32,, [ AC_MSG_WARN([Couldn't find gethostbyaddr]) ])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h \
sys/time.h termios.h unistd.h openssl/aes.h openssl/blowfish.h zlib.h \
sys/poll.h sys/select.h netdb.h windows.h pty.h pwd.h signal.h inttypes.h \
stdint.h sys/types.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_SELECT_ARGTYPES
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([endpwent getpass memmove memset gethostbyname gethostbyaddr \
 select socket strchr strdup strerror strstr poll getpwent getuid \
signal tcgetattr tcsetattr])

AC_CONFIG_FILES([Makefile
                 libssh/Makefile])
AC_OUTPUT
